fix dialog footer overflow

--- a/packages/core/src/components/dialog/_dialog-footer.scss
+++ b/packages/core/src/components/dialog/_dialog-footer.scss
@@ -27,7 +27,7 @@
 }
 
 .#{$ns}-dialog-footer-main-section {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 }
 
 .#{$ns}-dialog-footer-actions {
